Revision history for Perl extension Mail::Sender::Easy.

0.0.1  Thu Dec 29 15:05:06 2005
	- original version; created by h2xs 1.22 with options
		-AXc -n Mail::Sender::Easy

0.0.2  Sun Mar 12 08:55:19 2006
        - Made FQDN code more robust (IE Winders can't do DynaLoader) and userinfo more windows friendly [spine shivers].
	- POD spelling error fixed

0.0.3  Mon May 22 23:51:58 2006
	- added _text_info and _html_info keys *finally* :)
	
0.0.4  Tue Aug 15 08:37:25 2006
    - fixed plain text only emails use _text_info

0.0.5  Wed Sep 14 11:33:57 2006
	- re bundled without Mac's ._ files in the tarball

??
	-